limit sidebar size to 100vh to avoid overflowing

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -1,7 +1,8 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
-  "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
@@ -47,7 +48,8 @@ body {
 
 @media (min-width: 1200px) {
   .sidebar {
-    position: sticky;
+    overflow-y: scroll;
+    max-height: 100vh;
   }
 
   .overall {
@@ -60,7 +62,7 @@ body {
     grid-template-areas:
       "header header header header"
       ". content sidebar ."
-      ". content . ."
+      ". content sidebar ."
       "footer footer footer footer";
   }
 }
@@ -76,7 +78,7 @@ body {
     grid-template-areas:
       ". header header ."
       ". content sidebar ."
-      ". content . ."
+      ". content sidebar ."
       ". footer footer .";
   }
 }
@@ -100,7 +102,7 @@ body {
   border-bottom-left-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
   background-color: #f2f2f2;
-  box-shadow: 2px 11px 8px 0px rgba(191, 191, 191, 0.30);
+  box-shadow: 2px 11px 8px 0px rgba(191, 191, 191, 0.3);
 }
 
 .main-content {
@@ -221,18 +223,17 @@ html {
 }
 details {
   summary {
-    list-style-type: '👇';
+    list-style-type: "👇";
     h2 {
-    display: inline;
+      display: inline;
     }
   }
 }
-details[open]{
+details[open] {
   summary {
-    list-style-type: '☝';
+    list-style-type: "☝";
     h2 {
       display: inline;
-      }
+    }
+  }
 }
-}
-
